--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,28 @@
 body {
-  background-color: azure;
+  background-color: forestGreen;
+}
+
+
+h1{
+  text-align: center;
+}
+
+.player, .controls {
+  border: 1px solid black;
+  border-radius: 10px;
+  margin: 2%;
+  background-color: #eee;
+}
+
+#player2Card, #player1Card {
+  margin: 5px;
+}
+
+input[type="button"] {
+  margin: 10px;
+}
+
+#result {
+  font-size: 1.2em;
+  font-weight: bold;
 }
